// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test SegmentedControl click on selected index 1`] = `
<div>
  <div
    class="segmented-control"
  >
    <div
      class="seg-item selected"
      title="tCorner"
    >
      <img
        class="seg-item-image"
        src="img/right-panel/icon-nodetype-0.svg"
      />
    </div>
    <div
      class="seg-item"
      title="tSmooth"
    >
      <img
        class="seg-item-image"
        src="img/right-panel/icon-nodetype-1.svg"
      />
    </div>
    <div
      class="seg-item"
      title="tSymmetry"
    >
      <img
        class="seg-item-image"
        src="img/right-panel/icon-nodetype-2.svg"
      />
    </div>
  </div>
</div>
`;

exports[`test SegmentedControl disabled 1`] = `
<div>
  <div
    class="segmented-control disabled"
  >
    <div
      class="seg-item selected"
      title="tCorner"
    >
      <img
        class="seg-item-image"
        src="img/right-panel/icon-nodetype-0.svg"
      />
    </div>
    <div
      class="seg-item"
      title="tSmooth"
    >
      <img
        class="seg-item-image"
        src="img/right-panel/icon-nodetype-1.svg"
      />
    </div>
    <div
      class="seg-item"
      title="tSymmetry"
    >
      <img
        class="seg-item-image"
        src="img/right-panel/icon-nodetype-2.svg"
      />
    </div>
  </div>
</div>
`;

exports[`test SegmentedControl enabled 1`] = `
<div>
  <div
    class="segmented-control"
  >
    <div
      class="seg-item selected"
      title="tCorner"
    >
      <img
        class="seg-item-image"
        src="img/right-panel/icon-nodetype-0.svg"
      />
    </div>
    <div
      class="seg-item"
      title="tSmooth"
    >
      <img
        class="seg-item-image"
        src="img/right-panel/icon-nodetype-1.svg"
      />
    </div>
    <div
      class="seg-item"
      title="tSymmetry"
    >
      <img
        class="seg-item-image"
        src="img/right-panel/icon-nodetype-2.svg"
      />
    </div>
  </div>
</div>
`;

exports[`test SegmentedControl multiple selected indexes 1`] = `
<div>
  <div
    class="segmented-control"
  >
    <div
      class="seg-item selected"
      title="tCorner"
    >
      <img
        class="seg-item-image"
        src="img/right-panel/icon-nodetype-0.svg"
      />
    </div>
    <div
      class="seg-item"
      title="tSmooth"
    >
      <img
        class="seg-item-image"
        src="img/right-panel/icon-nodetype-1.svg"
      />
    </div>
    <div
      class="seg-item"
      title="tSymmetry"
    >
      <img
        class="seg-item-image"
        src="img/right-panel/icon-nodetype-2.svg"
      />
    </div>
  </div>
</div>
`;
